After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 68661 - Assertion and blank areas with freeze/merge
Assertion and blank areas with freeze/merge
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Sheet Objects
git master
Other other
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2002-01-14 02:03 UTC by Adrian Custer
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Adrian Custer 2002-01-14 02:03:39 UTC
Gnumeric generates a CRITICAL assertion and draws strange blank areas.


10) new gnumeric

20) Fill A1:Z24 for visual reference (say as fibirnacci: each cell is one
more than the cell above  or to its left:
1 2 3 4 ...
2 3 4 5 ...
3 4 5 6 ...
...........
)

30) merge C4:H4

40) select col C (selection expands to span the merge) -> hide

50) select J24 -> View->Freeze

60) select col A -> insert col

--> gnumeric gives:
** CRITICAL **: file item-grid.c: line 365 (item_grid_draw): assertion
`merged_active == NULL' failed.
and blank areas appear in the frozen panes.

Note you can undo.

cheers,
adrian
Comment 1 Jody Goldberg 2002-01-14 05:33:57 UTC
Excellent bug.
I see the problem, now all I need is a clean solution for it.
Comment 2 Jody Goldberg 2002-01-14 16:24:47 UTC
Fixed in CVS.